added both front end and back end changes